@@ -1,12 +1,14 @@
 // This file may be redistributed and modified only under the terms of
 // the GNU Lesser General Public License (See COPYING for details).
-// Copyright (C) 2005 Simon Goodall
+// Copyright (C) 2005 - 2006 Simon Goodall
 
 #ifndef LIBWFUT_TYPES_H
 #define LIBWFUT_TYPES_H 1
 
 #include <string>
 #include <list>
+
+#include <zlib.h>
 
 typedef struct {
   std::string name;
@@ -21,7 +23,7 @@ typedef std::list<ChannelObject> ChannelList;
 typedef struct {
   std::string filename;
   int version;
-  long crc32;
+  uLong crc32;
   long size;
   bool execute;
 } FileObject;
